[package]
name = "text-editor"
version = "0.1.0"
authors = ["Nils Martel <nilsmartel@yahoo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"              # The most simple way to add colors in your terminal
